force-app/main/default/objects/vlocity_cmt__MediaContentTitle__c/vlocity_cmt__MediaContentTitle__c.object-meta.xml
<CustomObject>
    <description>This record stores the details of the Event / Show telecasted in Linear TV/Radio channels. This will also be referenced while creating Scheduled program records for Channel Master setup.</description>
    <label>Media Content Title</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Media Content Titles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>