force-app/main/default/objects/vlocity_cmt__MediaContentTitle__c/fields/vlocity_cmt__AvailableLanguages__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__AvailableLanguages__c</fullName>
    <description>Captures the language of the Media Content.</description>
    <label>Available Languages</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>Spanish</fullName>
            </value>
            <value>
                <fullName>French</fullName>
            </value>
            <value>
                <fullName>Chinese</fullName>
            </value>
            <value>
                <fullName>Hindi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>