force-app/main/default/objects/vlocity_cmt__MediaContentTitle__c/fields/vlocity_cmt__Description__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__Description__c</fullName>
    <description>Captures the Description for the Media Content title.</description>
    <label>Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>