force-app/main/default/objects/vlocity_cmt__MediaContentTitle__c/fields/vlocity_cmt__Genre__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__Genre__c</fullName>
    <description>Captures the genre of the Media Content.</description>
    <label>Genre</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sports</fullName>
            </value>
            <value>
                <fullName>Soap Opera</fullName>
            </value>
            <value>
                <fullName>Sitcom</fullName>
            </value>
            <value>
                <fullName>Movie</fullName>
            </value>
            <value>
                <fullName>News</fullName>
            </value>
            <value>
                <fullName>Comedy</fullName>
            </value>
            <value>
                <fullName>Sci-Fi</fullName>
            </value>
            <value>
                <fullName>Thriller</fullName>
            </value>
            <value>
                <fullName>Documentary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>