force-app/main/default/objects/vlocity_cmt__MediaContentTitle__c/fields/vlocity_cmt__NumberOfEpisodes__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__NumberOfEpisodes__c</fullName>
    <description>Captures the number of separate episodes in which a serialised story, radio, or television program is delivered.</description>
    <label>Number of Episodes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>